Stop content sniffing after successful encoding detection

Content sniffing should stop once the detector makes a valid
guess. http://crrev.com/2697213002 introduced a side effect
that has the detector continue to sniff the content, therefore
opens the possibility of returning an encoding different from
the first guess. It leads to a document decoded with multiple
encoding schemes, one of which may not be correct.

This CL addresses it by defining a new flag |detection_completed_|
to tell the TextResourceDecoder to stop sniffing, even if
detector returns false for unlabelled UTF-8 documents. Also added
a test verifying the behavior.

Bug: 710861
Change-Id: Ic07de3ae08fbb742aa3c24f1e18055348d6acbd8
Reviewed-on: https://chromium-review.googlesource.com/1132904
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Jinsuk Kim <jinsukkim@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574489}
Former-commit-id: efbdada3f735a2631e9dfeed5c5e3f880245ccd3